<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DrinKing</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_start_game">Game on!</string>
    <string name="button_rules">Rules</string>
    <string name="button_exit">Exit</string>
    <string name="button_add_challenge">Add your own challenge</string>
    <string name="button_add_player">Add player</string>
    <string name="text_view_game_mode">Game mode</string>
    <string name="text_view_solo">Solo</string>
    <string name="text_view_team">Team</string>
    <string name="button_set_tools">Set tools</string>
    <string name="button_start_game_now">Start the Game</string>
    <string name="title_activity_player_list">PlayerList</string>
    <string name="title_activity_add_player">AddPlayer</string>
    <string name="title_activity_challenge">Challenge</string>
    <string name="button_win_text">WIN</string>
    <string name="edit_text_new_challenge_name">Enter the new challenge\'s name here</string>
    <string name="edit_text_new_challenge_content">Enter the challenge description here</string>
    <string name="button_add_new_challenge_done">Add Challenge</string>
    <string name="button_add_players">Add Players</string>
    <string name="button_confirm_player">Confirm Player</string>
    <string name="radio_button_plastic_cups_text">Plastic Cups</string>
    <string name="radio_button_cards_text">Cards</string>
    <string name="radio_button_dice_text">Dice</string>
    <string name="radio_button_ping_pong_ball_text">Ping Pong Ball</string>
    <string name="radio_button_no_tools">No tools needed</string>
    <string name="switch_game_mode_team">Team</string>
    <string name="switch_game_mode_solo">Solo</string>
    <string name="text_view_blue_team">Blue</string>
    <string name="text_view_red_team">Red</string>
    <string name="action_bar_title">DrinKing</string>
    <string name="title_activity_settings">Settings</string>
    <string name="set_preferences">Select your available tools</string>
    <string name="ping_pong_balls">Ping Pong balls</string>
    <string name="cards">Cards</string>
    <string name="dice">Dice</string>
    <string name="plastic_cups">Plastic cups</string>
    <string name="no_tools_needed">No tools needed</string>
    <string name="pref_difficulty_summary">Select available</string>
    <string name="button_restart_game_text">Restart Game</string>
    <string name="insufficient_players">Two or more players necessary to play!</string>
    <string name="insufficient_teams">Add at least one player of each team!</string>
    <string name="winner_solo_text">The new DrinKing is %s!!!</string>
    <string name="has_to_drink">Penalty sips for %s :</string>
    <string name="button_new_game">New Game</string>
    <string name="text_rules_content">Select if you wanna play by teams or solo. Add players to each team fast and start playing!  One on one random challenges will start to appear in screen, together with a sip penalty to a random player or a whole team. After the penalty is paid, both players assigned for the current challenge displayed will start playing it.  Player who wins gets a point for himself/herself if the game mode is solo, or to his/her whole team if the game mode is by teams. After selecting who won, another challenge will appear, and so on.  When will the game finish? Who will be the next DrinKing?  If you selected Solo, the first player who wins 5 challenges wins the game and will become the current DrinKing! If you selected Team game mode, the first team who wins 10 challenges wins the game and will become the current DrinKings! Always remember, IF YOU DRINK DON\'T DRIVE!!!</string>
    <string name="text_rules_title">DrinKing\'s Rules</string>

</resources>
