<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="co.mobilemakers.drinking.AddChallengeFragment">

    <!-- TODO: Update blank fragment layout -->

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_text_new_challenge_name"
        android:hint="@string/edit_text_new_challenge_name"
        android:gravity="center_horizontal" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_text_new_challenge_content"
        android:hint="@string/edit_text_new_challenge_content"
        android:layout_weight="1"
        android:gravity="center_vertical|center_horizontal" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_add_new_challenge_done"
        android:id="@+id/button_add_new_challenge_done"
        android:layout_gravity="center_horizontal" />

</LinearLayout>
